--- a/templates/films/list.html.twig
+++ b/templates/films/list.html.twig
@@ -6,7 +6,12 @@
 {% block body %}
 
 <h1 class="text-center"> Liste des films </h1>
-
+<nav class="navbar navbar-light bg-light">
+  <form class="form-inline">
+    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+  </form>
+</nav>
 <table>
 
     {% for film in filmList %}
