--- a/templates/realisateurs/list.html.twig
+++ b/templates/realisateurs/list.html.twig
@@ -7,7 +7,12 @@
 <br>
 <h1 class="text-center"> Liste des réalisateurs </h1>
 <br>
-
+<nav class="navbar navbar-light bg-light">
+  <form class="form-inline">
+    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+  </form>
+</nav>
 <table class="table" id="realisateur_table">
     <thead>
         <th>Nom</th>
