modif email et ajout fonctions de modifi utilisateur

--- a/templates/emails/email.html.twig
+++ b/templates/emails/email.html.twig
@@ -1,7 +1,7 @@
 <h1>Message depuis le site Fantasclic</h1>
 
-<p>De : {{ email }}</p>
+<p>De : {{ mail }}</p>
 
-<p>Sujet : {{ sujet }}</p>
+<p>Sujet : {{ subject }}</p>
 
 <p>Message : {{ message|raw }}</p>
