--- a/templates/utilisateurs/updatePassword.html.twig
+++ b/templates/utilisateurs/updatePassword.html.twig
@@ -1,10 +1,10 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Modifier vote profil{% endblock %}
+{% block title %}Modifier votre mot de passe{% endblock %}
 
 {% block body %}
 <div class="mx-auto" style="width: 700px">
-    <h1 class="text-center">Modifier votre profil</h1>
+    <h1 class="text-center">Modifier votre mot de passe</h1>
 
     {{ form(form) }}
 </div>
