--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,7 +27,7 @@
 
   <header class="position-relative">
     <div>
-      <img src="img/banniereProjetCopie.jpg" class="img-fluid w-100" alt="..." style="height:25rem">
+      <img src={{ asset('img/banniereProjetCopie.jpg') }} class="img-fluid w-100" alt="..." style="height:25rem">
     </div>
 
     <div class="container-fluid p-0" style="width:100%; height:400px; position:absolute; background:rgba(0,0,0,0); backdrop-filter:blur(1px); top:0">
@@ -53,7 +53,7 @@
 
             <div class="navbar-nav mx-auto">
 
-                <a class="nav-link text-danger mr-5 text-uppercase" href="#"><i class="fas fa-home"></i> Accueil </a>
+                <a class="nav-link text-danger mr-5 text-uppercase" href={{ path('accueil') }}> <i class="fas fa-home"></i> Accueil </a>
                 <a class="nav-link text-danger mr-5 text-uppercase" href={{ path('list_film') }}> films </a>
                 <a class="nav-link text-danger mr-5 text-uppercase" href={{ path('list_realisateur') }}> réalisateurs
                 </a>
