--- a/templates/films/list.html.twig
+++ b/templates/films/list.html.twig
@@ -6,45 +6,48 @@
 {% block body %}
 
 <h1 class="text-center"> Liste des films </h1>
-<nav class="navbar navbar-light bg-light">
-  <form class="form-inline">
-    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-  </form>
-</nav>
-<table>
 
+<nav class="navbar navbar-light bg-light">
+    <form class="form-inline">
+        <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+</nav>
+
+<table>
     {% for film in filmList %}
     <ul>
         <li> (emplacement affiche) {{ film.affiche }} 
             {# {% if is_granted('ROLE_ADMIN') %}  #}
-            <a class="btn btn-primary" href={{ path('detail_film', {id:film.id}) }} > En cliquant, sur l'affiche, on verra les détails du film </a>
+            <a class="btn btn-info" href={{ path('detail_film', {id:film.id}) }} > En cliquant sur l'affiche, on verra les détails du film </a>
             {# {% endif %} #}
         </li>
-
         <li>
             {{ film.titre }} 
             {% if film.annee is not null %}
                 ({{ film.annee }})
             {% endif %}
 
-            {# {% if is_granted('ROLE_ADMIN') %}  #}
+            {#  
+            {% if is_granted('ROLE_ADMIN') %}  
             <a class="btn btn-warning" href={{ path('update_film', {id:film.id}) }}> Modifier </a> 
-            {# {% endif %} #}
+            {% endif %} 
 
-            {# {% if is_granted('ROLE_ADMIN') %}  #}
+            {% if is_granted('ROLE_ADMIN') %}
             <a class="btn btn-danger" href={{ path('delete_film', {id:film.id}) }}> Supprimer </a> 
-            {# {% endif %} #}
+            {# {% endif %}
+            #}
         </li>
     </ul>
 
     {% endfor %}
 </table>
 
-<br> <br> <br>
+<br> <br>
 
 {# {% if is_granted('ROLE_ADMIN') %}  #}
-<a class="btn btn-primary" href={{ path('create_film') }}> Ajouter un film </a> 
+<a class="btn-block btn-lg btn-success text-center" href={{ path('create_film') }}> AJOUTER UN FILM </a> 
 {# {% endif %} #}
+<br> <br>
 
 {% endblock %}
