--- a/templates/emails/contact.html.twig
+++ b/templates/emails/contact.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
 <h1>Nous contacter</h1>
-<p>* champs obligatoire</p>
+<p>* champs obligatoires</p>
 {{ form_start(form) }}
 <div class="row">
     <div class="col-6">
