--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -27,9 +27,10 @@
 
 <body class="bg-secondary" style="font-family: '_TOP_SECRET.otf'; src: url('public/font/_TOP_SECRET_.otf')">
 
+    <!-- Header banniere -->
     <header class="position-relative">
         <div>
-            <img src={{ asset('img/header/banniereProjetCopie.jpg') }} class="img-fluid w-100" alt="..."
+            <img src={{ asset('img/header/banniereProjetCopie.jpg') }} class="img-fluid w-100" alt="bannier header"
                 style="height:25rem">
         </div>
 
@@ -37,7 +38,7 @@
             style="width:100%; height:400px; position:absolute; background:rgba(0,0,0,0); backdrop-filter:blur(1px); top:0">
 
             <div style="text-align:center; margin-top:4rem">
-                <img src={{ asset('img/header/logoFantasclic.jpg')}} alt="">
+                <img src={{ asset('img/header/logoFantasclic.jpg')}} alt="logo fantasclic">
             </div>
 
             {# <div class="container-fluid p-0" style="position:absolute; bottom:0">
@@ -46,7 +47,8 @@
 
     </header>
 
-    <nav class="navbar navbar-expand-lg navbar-light" style="font-size:1.5rem">
+    <!-- Nav bar -->
+    <nav class="navbar navbar-expand-lg navbar-light pb-4" style="font-size:1.5rem; background-color: #0a0a0a;">
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -56,40 +58,47 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
 
             <div class="navbar-nav mx-auto">
-
-                <div style="background-image:url('img/navTicket.jpg'); background-size:cover; width:16rem"><a
-                        class="nav-link text-danger m-3 text-uppercase" style="text-align:center"
-                        href={{ path('accueil') }}> <i class="fas fa-home"></i> Accueil </a></div>
-                <div style="background-image:url('img/navTicket.jpg'); background-size:cover; width:16rem"><a
-                        class="nav-link text-danger m-3 text-uppercase" style="text-align:center"
-                        href={{ path('list_film') }}> films </a></div>
-                <div style="background-image:url('img/navTicket.jpg'); background-size:cover; width:16rem"><a
-                        class="nav-link text-danger m-3 text-uppercase" style="text-align:center"
-                        href={{ path('list_realisateur') }}> réalisateurs
-                    </a></div>
-                <div style="background-image:url('img/navTicket.jpg'); background-size:cover; width:16rem"><a
-                        class="nav-link text-danger m-3 text-uppercase" style="text-align:center"
-                        href={{ path('list_genre') }}> genres </a></div>
-                <div style="background-image:url('img/navTicket.jpg'); background-size:cover; width:16rem"><a
-                        class="nav-link text-danger m-3 text-uppercase" style="text-align:center" href="#"> bientôt à
-                        l'affiche </a></div>
-                <div style="background-image:url('img/navTicket.jpg'); background-size:cover; width:16rem"><a
-                        class="nav-link text-danger m-3 text-uppercase" style="text-align:center" href="#"> top de la
-                        rédac' </a></div>
-
+                <div
+                    style="background-image:url('img/navTicket4-no-bg.png'); background-size:cover; width:12rem; padding-top: 1.2rem;">
+                    <a class="nav-link text-danger strong small font m-2 text-uppercase" style="text-align:center;"
+                        href={{ path('accueil') }}><i class="fas fa-home"></i>Accueil</a>
+                </div>
+                <div
+                    style="background-image:url('img/navTicket4-no-bg.png'); background-size:cover; width:12rem; padding-top: 1.2rem;">
+                    <a class="nav-link text-danger strong small m-2 text-uppercase" style="text-align:center"
+                        href={{ path('list_film') }}>films</a>
+                </div>
+                <div
+                    style="background-image:url('img/navTicket4-no-bg.png'); background-size:cover; width:12rem; padding-top: 0.7rem;">
+                    <a class="nav-link text-danger strong small m-1 text-uppercase" style="text-align:center"
+                        href="#">top de<br>la
+                        rédac'</a>
+                </div>
+                <!-- Gestion utilisateur/admin -->
                 {% if is_granted("ROLE_USER") %}
-                <a class="nav-link text-warning" href={{ path('app_logout') }}>SE DECONNECTER</a>
-                <a class="nav-link text-warning" href={{ path('detail_utilisateur') }}>ESPACE
-                    PERSONNEL</a>
+                <div>
+                    <div>
+                        <a class="nav-link btn btn-primary mt-1" href={{ path('app_logout') }}>SE
+                            DECONNECTER</a>
+                    </div>
+                    <div>
+                        <a class="nav-link btn btn-primary mt-2" href={{ path('detail_utilisateur') }}>ESPACE
+                            PERSONNEL</a>
+                    </div>
+                </div>
                 {% else %}
-                <div style="background-image:url('img/navTicket.jpg'); background-size:cover; width:16rem"><a
-                        class="nav-link text-danger m-3 text-uppercase" style="text-align:center"
-                        href={{ path('app_login') }}>CONNEXION</a></div>
+                <div
+                    style="background-image:url('img/navTicket4-no-bg.png'); background-size:cover; width:12rem; padding-top: 1.5rem; font-size: 1.3rem">
+                    <a class="nav-link text-danger strong small m-2 text-uppercase" style="text-align:center"
+                        href={{ path('app_login') }}>Connexion<br></a>
+                </div>
                 {% endif %}
 
-                {% if is_granted("ROLE_ADMIN") %}
-                <a href={{ path('register_admin')}} class="nav-link">Nouveau compte admin</a>
-                {% endif %} </a>
+                <div
+                    style="background-image:url('img/navTicket4-no-bg.png'); background-size:cover; width:12rem; padding-top: 0.7rem; font-size: 1.3rem">
+                    <a class="nav-link text-danger strong small m-2 text-uppercase" style="text-align:center"
+                        href={{ path('app_login') }}>Menu<br> admin</a>
+                </div>
             </div>
         </div>
     </nav>
@@ -99,23 +108,19 @@
         {% endblock %}
     </div>
 
+    <!-- footer -->
     <footer class="py-1 mt-5" style="background-color: #0a0a0a;">
-
         <div class="container">
             <div class="d-flex justify-content-around py-2">
-                <a style="color: #fff" class="lead" href={{ path('contact') }}>Contact</a>
+                <a style="color: #fff" class="lead" href={{ path('contact') }}>
+                    Contact
+                </a>
                 <a style="color: #fff" class="lead" href={{ path('a_propos') }}>Qui sommes-nous ?</a>
             </div>
 
-            <div class="container">
-                <div class="row">
-                    <div class="col-12">
-                        <!-- Copywrite Text -->
-                        <div class="copy_right_text text-center py-2">
-                            <p style="color: #fff" class="lead">© 2021 Fantasclic All Rights Reserved</p>
-                        </div>
-                    </div>
-                </div>
+            <!-- Copywrite Text -->
+            <div class="copy_right_text text-center py-2">
+                <p style="color: #fff" class="lead">© 2021 Fantasclic All Rights Reserved</p>
             </div>
         </div>
     </footer>
