--- a/templates/apropos.html.twig
+++ b/templates/apropos.html.twig
@@ -8,13 +8,34 @@
     <h1 class text-center> Qui sommes-nous ? </h1>
 
     <div class="my-3">
-        <p> Qu'est-ce que FANTASCLIC ? Comment l'idée nous est-elle venue ? </p>
-        <p> Nous sommes, avant tout, 3 férus de cinéma à qui le grand écran manque fortement depuis cette période de pandémie mondiale que nous traversons tous (mars 2020 pour les historiens) et également, en quelque sorte, nous sommes des "nostalgiques des vidéo-clubs"... </p>
-        <p> L'époque où l'on choisissait un film grâce à sa jaquette ou son affiche semble lointaine... Mais sur FANTASCLIC, nous avons voulu mettre en avant ces oeuvres d'art du 7ème Art.</p>
-        <p> Bien conscients qu'à l'heure d'internet, l'affiche ne fait pas tout, notre site se veut comme un répertoire des films d'une catégorie dont nous sommes tous 3 amoureux : le fantastique ! Ces fameux "films de genre" comprenant la science-fiction, l'épouvante, l'horreur ou encore certains thrillers... Que ce soit un blockbuster divertissant, une série B fauchée ou une série Z bien "nanardesque", la tension et le suspense, présents aussi bien visuellement que musicalement, ont construit notre culture cinématographique et nous ont laissé des souvenirs mémorables.</p>
-        <p> Nous souhaitons, à notre tour, vous partager les émotions et autres frissons que l'on a ressentis ! Sur FANTASCLIC, vous retrouverez  des grands classiques, des films parfois passés inaperçus et à reconsidérer, des séries B imparfaites mais néanmoins intéressantes, des nanars qui nous feront rire avec tendresse et compassion avec leur budget dérisoire. Ce site s'adresse à tous : que l'on soit né dans les années 2000 et que l'on souhaite découvrir des films des eighties qui ont pu inspirer ceux d'aujourd'hui ou que l'on soit parent protecteur et que l'on veuille transmettre ce cinéma à nos enfants tout en leur trouvant un programme adapté.</p>
-        <p> Durée, signalétique jeunesse, synopsis, disponibilité sur plate-formes à abonnement ou en VOD, liens vers la bande-annonce et vers l'OST figurent parmi les nombreuses informations que FANTASCLIC vous propose pour chaque film. Nous pensons évidemment que la meilleure expérience de cinéma reste et restera en salle et sur grand écran mais nous souhaitons rendre ces films accessibles à tous les budgets également.</p>
-        <p> L'équipe de FANTASCLIC vous remercie de votre visite, vous souhaite une bonne navigation et surtout des expériences visuelles et auditives qui marqueront vos esprits.</p>
+        <p> Qu'est-ce que <span class="fantasclic">FANTASCLIC</span> ? Comment l'idée nous est-elle venue ? </p>
+        <p> Nous sommes, avant tout, 3 férus de cinéma à qui le grand écran manque fortement depuis cette période de
+            pandémie mondiale que nous traversons tous (mars 2020 pour les historiens) et également, en quelque sorte,
+            nous sommes des "nostalgiques des vidéo-clubs"... </p>
+        <p> L'époque où l'on choisissait un film grâce à sa jaquette ou son affiche semble lointaine... Mais sur
+            <span class="fantasclic">FANTASCLIC</span> , nous avons voulu mettre en avant ces oeuvres d'art du 7ème Art.
+        </p>
+        <p> Bien conscients qu'à l'heure d'internet, l'affiche ne fait pas tout, notre site se veut comme un répertoire
+            des films d'une catégorie dont nous sommes tous 3 amoureux : le fantastique ! Ces fameux "films de genre"
+            comprenant la science-fiction, l'épouvante, l'horreur ou encore certains thrillers... Que ce soit un
+            blockbuster divertissant, une série B fauchée ou une série Z bien "nanardesque", la tension et le suspense,
+            présents aussi bien visuellement que musicalement, ont construit notre culture cinématographique et nous ont
+            laissé des souvenirs mémorables.</p>
+        <p> Nous souhaitons, à notre tour, vous partager les émotions et autres frissons que l'on a ressentis ! Sur
+            <span class="fantasclic">FANTASCLIC</span> , vous retrouverez des grands classiques, des films parfois
+            passés inaperçus et à
+            reconsidérer,
+            des séries B imparfaites mais néanmoins intéressantes, des nanars qui nous feront rire avec tendresse et
+            compassion avec leur budget dérisoire. Ce site s'adresse à tous : que l'on soit né dans les années 2000 et
+            que l'on souhaite découvrir des films des eighties qui ont pu inspirer ceux d'aujourd'hui ou que l'on soit
+            parent protecteur et que l'on veuille transmettre ce cinéma à nos enfants tout en leur trouvant un programme
+            adapté.</p>
+        <p> Durée, signalétique jeunesse, synopsis, disponibilité sur plate-formes à abonnement ou en VOD, liens vers la
+            bande-annonce et vers l'OST figurent parmi les nombreuses informations que FANTASCLIC vous propose pour
+            chaque film. Nous pensons évidemment que la meilleure expérience de cinéma reste et restera en salle et sur
+            grand écran mais nous souhaitons rendre ces films accessibles à tous les budgets également.</p>
+        <p> L'équipe de FANTASCLIC vous remercie de votre visite, vous souhaite une bonne navigation et surtout des
+            expériences visuelles et auditives qui marqueront vos esprits.</p>
         <p> Ayané, Kévin et Yannick.</p>
 
     </div>
