--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -109,7 +109,7 @@
     </div>
 
     <!-- footer -->
-    <footer class="py-1 mt-5" style="background-color: #0a0a0a;">
+    <footer class="py-1" style="background-color: #0a0a0a;">
         <div class="container">
             <div class="d-flex justify-content-around py-2">
                 <a style="color: #fff" class="lead" href={{ path('contact') }}>
