--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -63,7 +63,7 @@ section {
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: 'Montserrat', sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
@@ -88,6 +88,7 @@ h3,
 h4,
 h5,
 h6 {
+  font-family: 'Girassol', cursive;
   margin-top: 0;
   margin-bottom: 0.5rem;
 }
