--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,3 +2,12 @@
     font-weight: bold !important;
     color: red;
 }
+
+.nav-link,
+.footer-text {
+    font-family: 'Girassol', cursive;
+}
+
+.body {
+    font-family: 'Montserrat' !important;
+}
