--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,7 +7,8 @@
     <meta charset="UTF-8">
     <title> {% block title %} Fantasclic {% endblock %} </title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Pangolin&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Girassol&family=Montserrat:wght@500&display=swap"
+        rel="stylesheet">
     {% block stylesheets %}
     <link rel="stylesheet" type="text/css" href={{ asset('css/bootstrap.css')}} />
     <link rel="stylesheet" type="text/css" href={{ asset('css/style.css')}} />
@@ -25,7 +26,7 @@
 </head>
 
 
-<body class="bg-secondary" style="font-family: '_TOP_SECRET.otf'; src: url('public/font/_TOP_SECRET_.otf')">
+<body class="bg-secondary" style="src: url('public/font/_TOP_SECRET_.otf')">
 
     <!-- Header banniere -->
     <header class="position-relative">
@@ -112,15 +113,15 @@
     <footer class="py-1" style="background-color: #0a0a0a;">
         <div class="container">
             <div class="d-flex justify-content-around py-2">
-                <a style="color: #fff" class="lead" href={{ path('contact') }}>
+                <a style="color: #fff" class="lead footer-text" href={{ path('contact') }}>
                     Contact
                 </a>
-                <a style="color: #fff" class="lead" href={{ path('a_propos') }}>Qui sommes-nous ?</a>
+                <a style="color: #fff" class="lead footer-text" href={{ path('a_propos') }}>Qui sommes-nous ?</a>
             </div>
 
             <!-- Copywrite Text -->
             <div class="copy_right_text text-center py-2">
-                <p style="color: #fff" class="lead">© 2021 Fantasclic All Rights Reserved</p>
+                <p style="color: #fff" class="footer-text">© 2021 Fantasclic All Rights Reserved</p>
             </div>
         </div>
     </footer>
