--- a/templates/accueil.html.twig
+++ b/templates/accueil.html.twig
@@ -11,7 +11,7 @@
     <a href="#"><img class="m-3 rounded-lg" src={{ asset('img/Scream.jpg')}} alt=""></a>
 </div> #}
 
-<div id="carouselExampleCaptions" class="carousel slide" style="margin:0; margin-top:5rem" data-ride="carousel">
+<div id="carouselExampleCaptions" class="carousel slide w-50" style="margin:auto; margin-top:5rem" data-ride="carousel">
   <ol class="carousel-indicators m-auto">
     <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active" style="width:10%; margin:0;"></li>
     <li data-target="#carouselExampleCaptions" data-slide-to="1" style="width:10%; margin:0;"></li>
@@ -19,21 +19,21 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src={{ asset('img/affiches/Jaws.jpg')}} class="d-block w-50 m-auto" alt="...">
+      <img src={{ asset('img/affiches/Jaws.jpg')}} class="d-block w-100 m-auto rounded" alt="...">
       <div class="carousel-caption d-none d-md-block text-danger">
         <h5>Les dents de la mer</h5>
         <p>1975</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src={{ asset('img/affiches/heredite.jpg')}} class="d-block w-50 m-auto" alt="...">
+      <img src={{ asset('img/affiches/heredite.jpg')}} class="d-block w-100 m-auto rounded" alt="...">
       <div class="carousel-caption d-none d-md-block text-danger">
         <h5>Hérédité</h5>
         <p>2018</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src={{ asset('img/affiches/Shining.jpg')}} class="d-block w-50 m-auto" alt="...">
+      <img src={{ asset('img/affiches/Shining.jpg')}} class="d-block w-100 m-auto rounded" alt="...">
       <div class="carousel-caption d-none d-md-block text-danger">
         <h5>Shining</h5>
         <p>1980</p>
