création et lien vers la page TOP mais y'a du boulot en front

--- a/templates/apropos.html.twig
+++ b/templates/apropos.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
 <div class="mt-4 mx-auto container" style="max-width: 50rem; background-color: #fff;">
 
-    <h1 class text-center> Qui sommes-nous ? </h1>
+    <h1 class="text-center"> Qui sommes-nous ? </h1>
 
     <div class="my-3">
         <p> Qu'est-ce que <span class="fantasclic">FANTASCLIC</span> ? Comment l'idée nous est-elle venue ? </p>
