--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -61,7 +61,7 @@
                 <div
                     style="background-image:url('img/navTicket4-no-bg.png'); background-size:cover; width:12rem; padding-top: 1.2rem;">
                     <a class="nav-link text-danger strong small font m-2 text-uppercase" style="text-align:center;"
-                        href={{ path('accueil') }}><i class="fas fa-home"></i>Accueil</a>
+                        href={{ path('accueil') }}><i class="fas fa-home"></i><br>Accueil</a>
                 </div>
                 <div
                     style="background-image:url('img/navTicket4-no-bg.png'); background-size:cover; width:12rem; padding-top: 1.2rem;">
@@ -71,7 +71,7 @@
                 <div
                     style="background-image:url('img/navTicket4-no-bg.png'); background-size:cover; width:12rem; padding-top: 0.7rem;">
                     <a class="nav-link text-danger strong small m-1 text-uppercase" style="text-align:center"
-                        href="#">top de<br>la
+                        href={{ path('top') }} >top de la<br>
                         rédac'</a>
                 </div>
                 <!-- Gestion utilisateur/admin -->
