--- a/templates/films/list.html.twig
+++ b/templates/films/list.html.twig
@@ -14,7 +14,7 @@
     </form>
 </nav>
 
-<ul style="list-style-type: none">>
+<ul style="list-style-type: none">
     {% for film in filmList %}
         <li>
             {# si je mets une boucle for, c'est l'affiche d'halloween qui boucle #}
