--- a/templates/accueil.html.twig
+++ b/templates/accueil.html.twig
@@ -4,41 +4,31 @@
 
 {% block body %}
 
-{# <div class="d-flex justify-content-center flex-wrap mt-5">
-    <a href="#"><img class="m-3 rounded-lg" src={{ asset('img/Jaws.jpg')}} alt=""></a>
-    <a href="#"><img class="m-3 rounded-lg" src={{ asset('img/heredite.jpg')}} alt=""></a>
-    <a href="#"><img class="m-3 rounded-lg" src={{ asset('img/Shining.jpg')}} alt=""></a>
-    <a href="#"><img class="m-3 rounded-lg" src={{ asset('img/Scream.jpg')}} alt=""></a>
-</div> #}
-
-<div id="carouselExampleCaptions" class="carousel slide w-50" style="margin:auto; margin-top:5rem" data-ride="carousel">
+<div id="carouselExampleCaptions" class="carousel slide w-50" style="margin:auto" data-ride="carousel">
   <ol class="carousel-indicators m-auto">
     <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active" style="width:10%; margin:0;"></li>
     <li data-target="#carouselExampleCaptions" data-slide-to="1" style="width:10%; margin:0;"></li>
     <li data-target="#carouselExampleCaptions" data-slide-to="2" style="width:10%; margin:0;"></li>
   </ol>
   <div class="carousel-inner">
-    <div class="carousel-item active">
-      <img src={{ asset('img/affiches/Jaws.jpg')}} class="d-block w-100 m-auto rounded" alt="...">
-      <div class="carousel-caption d-none d-md-block text-danger">
-        <h5>Les dents de la mer</h5>
-        <p>1975</p>
+    <div class="carousel-item active mt-5">
+      <a href="#"><img src={{ asset('img/affiches/Jaws.jpg')}} class="d-block w-100 m-auto rounded" alt="..."></a>
+      <div class="carousel-caption d-none d-md-block">
       </div>
+              <h2 class="my-5 text-center font-weight-bold">Les dents de la mer (1975)</h2>
     </div>
-    <div class="carousel-item">
-      <img src={{ asset('img/affiches/heredite.jpg')}} class="d-block w-100 m-auto rounded" alt="...">
-      <div class="carousel-caption d-none d-md-block text-danger">
-        <h5>Hérédité</h5>
-        <p>2018</p>
+    <div class="carousel-item mt-5">
+      <a href="#"><img src={{ asset('img/affiches/heredite.jpg')}} class="d-block w-100 m-auto rounded" alt="..."></a>
+      <div class="carousel-caption d-none d-md-block">
       </div>
+              <h2 class="my-5 text-center font-weight-bold">Hérédité (2018)</h2>
     </div>
-    <div class="carousel-item">
-      <img src={{ asset('img/affiches/Shining.jpg')}} class="d-block w-100 m-auto rounded" alt="...">
-      <div class="carousel-caption d-none d-md-block text-danger">
-        <h5>Shining</h5>
-        <p>1980</p>
+    <div class="carousel-item mt-5">
+      <a href="#"><img src={{ asset('img/affiches/Shining.jpg')}} class="d-block w-100 m-auto rounded" alt="..."></a>
+      <div class="carousel-caption d-none d-md-block">
+    </div>
+            <h2 class="my-5 text-center font-weight-bold">Shining (1980)</h2>
       </div>
-    </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
